<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingStart="8dp"
  android:paddingEnd="8dp">

  <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="@dimen/item_padding_vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_padding_horizontal"
        android:layout_marginEnd="@dimen/item_padding_horizontal"
        android:layout_marginBottom="@dimen/item_padding_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
          android:id="@+id/header"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          android:gravity="center"
          android:orientation="vertical">

          <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

          <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
          android:id="@+id/content"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

          <TextView
            android:id="@+id/action_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="14sp" />

        </LinearLayout>

      </LinearLayout>

      <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="300"
        app:el_expanded="false"
        app:el_parallax="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <Button
            android:id="@+id/edit"
            style="@style/ActionViewHolderButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:background="@color/colorPrimary"
            android:text="@string/edit"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

          <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3333" />

          <Button
            android:id="@+id/copy"
            style="@style/ActionViewHolderButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="@color/colorPrimary"
            android:text="@string/copy"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />


          <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6666" />

          <Button
            android:id="@+id/delete"
            style="@style/ActionViewHolderButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:background="@color/colorPrimary"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

      </net.cachapa.expandablelayout.ExpandableLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>
</LinearLayout>